--- a/dvo_ros/cfg/dvo.cfg
+++ b/dvo_ros/cfg/dvo.cfg
@@ -2,9 +2,9 @@
 
 PACKAGE='dvo_ros'
 import os
-import roslib; roslib.load_manifest(PACKAGE)
+##import roslib; roslib.load_manifest(PACKAGE)
 
-from dynamic_reconfigure.parameter_generator import *
+from dynamic_reconfigure.parameter_generator_catkin import *
 
 me = os.path.realpath(__file__)
 cpp_header = os.path.realpath(os.path.join(os.path.dirname(me), "cpp", "dvo_ros", "CameraDenseTrackerConfig.h"))
