--- a/dvo_benchmark/CMakeLists.txt
+++ b/dvo_benchmark/CMakeLists.txt
@@ -1,15 +1,7 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(dvo_benchmark)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
-rosbuild_init()
+#rosbuild_init()
 
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -38,16 +30,58 @@ find_package(VTK REQUIRED)
 include_directories(${VTK_INCLUDE_DIRS})
 link_directories(${VTK_LIBRARY_DIRS})
 
-rosbuild_add_executable(benchmark
+# opencv
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+# catkin package
+find_package(catkin REQUIRED COMPONENTS
+roscpp
+dvo_core
+dvo_ros
+dvo_slam
+eigen
+pcl_ros
+)
+
+#pcl library
+find_package(PCL REQUIRED)
+include_directories(${PCL_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+
+catkin_package(
+  INCLUDE_DIRS include 
+)
+
+## technically this should have been found in catkin_package
+include_directories(
+  ${PROJECT_SOURCE_DIR}/../dvo_core/include
+  ${PROJECT_SOURCE_DIR}/../dvo_ros/include
+  ${PROJECT_SOURCE_DIR}/../dvo_slam/include
+  ${PROJECT_SOURCE_DIR}/include
+)
+
+add_executable(benchmark
      src/benchmark_slam.cpp
 )
 
-#rosbuild_add_executable(experiment
+#add_executable(experiment
 #     src/experiment.cpp
 #)
 
+
 target_link_libraries(benchmark
+  #${PROJECT_NAME}
+  ## this should technically be not required to add manually 
+  ${catkin_LIBRARIES}
   vtkCommon
+  dvo_core
+  dvo_slam
+  dvo_ros
+  dvo_visualization
+  opencv_core
+ 
 )
 
 # create output directory - just convenience for our users
